--- a/templates/sponsor_navbar.html
+++ b/templates/sponsor_navbar.html
@@ -23,10 +23,10 @@
                     <a class="nav-link" href="#">Profile</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Campaigns</a>
+                    <a class="nav-link" href="{{url_for('add_campaign')}}">Create Campaign</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Find</a>
+                    <a class="nav-link" href="#">Find Influencer</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Stats</a>
